Subindo aula 12 e exercicios do hide

--- a/Aulas/Aula 11/aula11.ipynb
+++ b/Aulas/Aula 11/aula11.ipynb
@@ -200,6 +200,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 numeros estão no intervalo\n",
+      "9 numeros não estão no intervalo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando a estrutura de repetição for, faça um programa em C que receba 10 números e conte quantos deles estão no intervalo [10,20] e quantos deles estão fora do intervalo, escrevendo estas informações.\n",
+    "\n",
+    "intervalo = 0\n",
+    "foraIntervalo = 0\n",
+    "for i in range(10):\n",
+    "    numero = int(input('Digite um numero: '))\n",
+    "    if(20 >= numero >= 10):\n",
+    "        intervalo += 1\n",
+    "    else:\n",
+    "        foraIntervalo += 1\n",
+    "\n",
+    "print(f'{intervalo} numeros estão no intervalo')\n",
+    "print(f'{foraIntervalo} numeros não estão no intervalo')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
