--- a/Aulas/reforçoHide.ipynb
+++ b/Aulas/reforçoHide.ipynb
@@ -57,7 +57,6 @@
     "\n",
     "\n",
     "numero = int(input('Digite um numero aqui: '))\n",
-    "\n",
     "multiplicador = 1\n",
     "\n",
     "while(multiplicador < 11):\n",
@@ -65,6 +64,46 @@
     "    multiplicador += 1\n",
     "\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2 x 1 = 2\n",
+      "2\n",
+      "2 x 2 = 4\n",
+      "3\n",
+      "2 x 3 = 6\n",
+      "4\n",
+      "2 x 4 = 8\n",
+      "5\n",
+      "2 x 5 = 10\n",
+      "6\n",
+      "2 x 6 = 12\n",
+      "7\n",
+      "2 x 7 = 14\n",
+      "8\n",
+      "2 x 8 = 16\n",
+      "9\n",
+      "2 x 9 = 18\n",
+      "10\n",
+      "2 x 10 = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = int(input('Digite aqui um numero: '))\n",
+    "\n",
+    "for x in range(1, 11):\n",
+    "    print(f'{numero} x {x} = {numero * x}')\n",
+    "\n"
    ]
   },
   {
@@ -92,13 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[10.0, 20.0, 30.0, 40.0, 50.0]\n",
       "150.0\n"
      ]
     }
@@ -114,7 +154,32 @@
     "    listaNum.append(float(input('Digite aqui um numero: ')))\n",
     "    contador += 1\n",
     "\n",
+    "print(listaNum)\n",
     "print(sum(listaNum))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.0, 6.0, 4.0, 10.0, 20.0]\n",
+      "45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "listaNum = []\n",
+    "\n",
+    "for x in range(5):\n",
+    "    listaNum.append(float(input('Digite um numero: ')))\n",
+    "    \n",
+    "print(listaNum)\n",
+    "print(sum(listaNum))"
    ]
   },
   {
