Subindo aula 15 de Python

--- a/Aulas/reforçoHide.ipynb
+++ b/Aulas/reforçoHide.ipynb
@@ -257,7 +257,7 @@
     "# - Fuji\n",
     "# - Gala\n",
     "\n",
-    "frutas = ['banana', 'maça', 'laranja']\n",
+    "frutas = ['banana', 'maca', 'laranja']\n",
     "banana = ['dagua', 'nanica', 'prata']\n",
     "maca = ['gala', 'argentina', 'fuji']\n",
     "laranja = ['lima', 'pera']\n",
@@ -266,6 +266,99 @@
     "print(frutas[0], banana)\n",
     "print(frutas[1], maca)\n",
     "print(frutas[2], laranja)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana\n",
+      " - Dagua\n",
+      " - Nanica\n",
+      " - Prata\n",
+      "Maca\n",
+      " - Gala\n",
+      " - Argentina\n",
+      " - Prata\n",
+      "Laranja\n",
+      " - Lima\n",
+      " - Pera\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = ['banana', 'maca', 'laranja']\n",
+    "\n",
+    "bananaTipo = ['dagua', 'nanica','prata']\n",
+    "macaTipo = ['gala', 'argentina', 'prata']\n",
+    "laranjaTipo = ['lima', 'pera']\n",
+    "\n",
+    "for fruta in frutas:\n",
+    "    print(fruta.capitalize())\n",
+    "    if fruta == 'banana':\n",
+    "        for tipo in bananaTipo:\n",
+    "            print(f' - {tipo.capitalize()}')\n",
+    "    if fruta == 'maca':\n",
+    "        for tipo in macaTipo:\n",
+    "            print(f' - {tipo.capitalize()}')\n",
+    "    if fruta == 'laranja':\n",
+    "        for tipo in laranjaTipo:\n",
+    "            print(f' - {tipo.capitalize()}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana\n",
+      " - Dagua\n",
+      " - Nanica\n",
+      " - Prata\n",
+      "Maca\n",
+      " - Gala\n",
+      " - Argentina\n",
+      " - Prata\n",
+      "Laranja\n",
+      " - Lima\n",
+      " - Pera\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = ['banana', 'maca', 'laranja']\n",
+    "\n",
+    "bananaTipo = ['dagua', 'nanica','prata']\n",
+    "macaTipo = ['gala', 'argentina', 'prata']\n",
+    "laranjaTipo = ['lima', 'pera']\n",
+    "\n",
+    "contador = 0\n",
+    "while(contador < len(frutas)):\n",
+    "    print(frutas[contador].capitalize())\n",
+    "    if frutas[contador] == 'banana':\n",
+    "        for fruta in bananaTipo:\n",
+    "            print(f' - {fruta.capitalize()}')\n",
+    "    if frutas[contador] == 'maca':\n",
+    "        contadorTipo = 0\n",
+    "        while contadorTipo < len(macaTipo):\n",
+    "            print(f' - {macaTipo[contadorTipo].capitalize()}')\n",
+    "            contadorTipo += 1\n",
+    "    if frutas[contador] == 'laranja':\n",
+    "        contadorTipo = 0\n",
+    "        while contadorTipo < len(laranjaTipo):\n",
+    "            print(f' - {laranjaTipo[contadorTipo].capitalize()}')\n",
+    "            contadorTipo += 1\n",
+    "    contador += 1\n"
    ]
   },
   {
