Subindo aula 16 de Python

--- a/Aulas/Aula 15/index.ipynb
+++ b/Aulas/Aula 15/index.ipynb
@@ -192,6 +192,18 @@
     "            return\n",
     "    print('Receita não encontrada. :( ')\n",
     "\n",
+    "def alterarReceita():\n",
+    "    cod = int(input('Digite o codigo da receita que deseja alterar: '))\n",
+    "    for i in todasReceitas:\n",
+    "        if i[0] == cod:\n",
+    "            i[1] == input('Digite o novo codigo: ')\n",
+    "            i[2] == input('Digite a nova receita: ')\n",
+    "            print('Receita alterada com sucesso')\n",
+    "            return\n",
+    "    print('Receita não encontrada')\n",
+    "\n",
+    "\n",
+    "\n",
     "texto('Site de Receitas')\n",
     "while(True):\n",
     "    menu = int(input('1 - Ler Receita \\n 2 - Listar Receitas \\n 3 - Cadastrar Receita \\n 4 - Alterar Receita \\n 5 - Sair \\n '))\n",
@@ -203,7 +215,7 @@
     "    elif(menu == 3):\n",
     "        cadastrarReceita()\n",
     "    elif(menu == 4):\n",
-    "        pass\n",
+    "        alterarReceita()\n",
     "    elif(menu > 4):\n",
     "        break"
    ]
